# shitsukan-eval

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
models/: gpt4o.py  idefics2.py  idefics3.py  llava_next_hf.py  molmo.py  qwen2_vl.py
models/hf_models/: gemma2_instruct_hf.py  hf_model_default_config.yaml  idefics2_hf.py  idefics3_hf.py  llama2_instruct_hf.py  llama3_instruct_hf.py  llama3_vision_instruct_hf.py  llava_hf.py  llava_onevision_hf.py  llm_jp_3_instruct_hf.py  molmo_hf.py  qwen2_5_instruct_hf.py  qwen2_instruct_hf.py  qwen2_vl_hf.py
models/vllm_models/: qwen2_vl_vllm.py  vllm_model_default_config.yaml
shitsukan_eval/: __main__.py  evaluator.py
shitsukan_eval/tasks/commonsense/classification/: commonsense_classification_en.py  commonsense_classification_en.yaml  commonsense_classification_ja.py  commonsense_classification_ja.yaml
shitsukan_eval/tasks/commonsense/generation/: commonsense_generation_ja.py  commonsense_generation_ja.yaml
shitsukan_eval/tasks/perception/generation/: perception_generation_ja.py  perception_generation_ja.yaml
shitsukan_eval/tasks/perception/selection/: perception_selection_en.py  perception_selection_en.yaml  perception_selection_ja.py  perception_selection_ja.yaml
shitsukan_eval/tasks/taxonomic/a_b_classification/: taxonomic_a_b_classification_ja.py  taxonomic_a_b_classification_ja.yaml
shitsukan_eval/tasks/taxonomic/multiple_choice_classification/: taxonomic_multiple_choice_classification_ja.py  taxonomic_multiple_choice_classification_ja.yaml
shitsukan_eval/tasks/taxonomic/yes_no_classification/: taxonomic_yes_no_classification_ja.py  taxonomic_yes_no_classification_ja.yaml
tools/utils/: data_utils.py
